Minor spacing fixes for secondary pages

--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -689,8 +689,10 @@ body{
     clear: both;
   }
 
+  padding:30px 5px 0 5px;
+
   @media only screen and (min-width:500px){
-    padding:30px 30px 0 30px;
+    padding:30px 0;
   }
 }
 
@@ -1121,7 +1123,6 @@ body{
 
   @media only screen and (min-width:500px){
     padding-right: 45px;
-    left: -30px;
     padding-left:15px;
   }
 
